--- a/.github/workflows/storage-finder-sync.yml
+++ b/.github/workflows/storage-finder-sync.yml
@@ -16,6 +16,11 @@ jobs:
 
       - name: Set up Bun
         uses: oven-sh/setup-bun@v2
+        
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: latest
 
       - name: Install dependencies
         run: bun install --frozen-lockfile
